Bug fix for movement capacities and wall ride

--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,28 +160,28 @@ CurrentPosGridSize=4
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Shoot.IA_Shoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_SkillTree.IA_SkillTree,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightShoot.IA_LightShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightSpellChoice.IA_LightSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkShoot.IA_DarkShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkSpellChoice.IA_DarkSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Dash.IA_Dash,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Melee.IA_Melee,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Pause.IA_Pause
 InputAction=
-K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.C1C838AA465C8F8E79A2ACB12EDDBDF6
+K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.C1C838AA465C8F8E79A2ACB12EDDBDF6,K2Node_FunctionEntry.Inputs.254B5A5845B2748C882EE586DAC198CB
 StaticMeshComponent=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 CapsuleComponent=
-SceneComponent=
+SceneComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Blockout_Tube_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
 RotatingMovementComponent=BP_Enemy_C.Collision.Collision
 Blockout_Skewbox_C=BP_Enemy_C.Collision.Collision
 Portal_C=BP_Enemy_C.Collision.Collision
-StaticMeshActor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+StaticMeshActor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 BP_FirstPersonCharacter_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.PBRWorkflow,MaterialEditorInstanceConstant.ParameterGroups.Base Color,MaterialEditorInstanceConstant.ParameterGroups.Emissive,MaterialEditorInstanceConstant.ParameterGroups.MetallicRoughness,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Occlusion,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.ClearCoat
 MaterialInstanceConstant=
 EdGraphNode_Comment=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_VariableSet=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 PropertyWrapper=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-CustomGameInstance_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-K2Node_MacroInstance=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+CustomGameInstance_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+K2Node_MacroInstance=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_VariableGet=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_CustomEvent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -295,7 +295,7 @@ MovieSceneTakeSettings=
 TakeRecorderMicrophoneAudioSourceSettings=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-MovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+MovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 ArrowComponent=BP_Enemy_C.Collision.Collision
 ProjectileMovementComponent=BP_Enemy_C.Collision.Collision
 K2Node_CallFunction=BP_Enemy_C.Collision.Collision,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -340,7 +340,7 @@ W_SkillTree_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collisio
 W_SkillButton_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 TextBlock=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 AISenseEvent_Damage=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
-W_Options_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+W_Options_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 EdGraphNode=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 K2Node_SwitchString=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 BP_Enemies_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -354,7 +354,7 @@ MulticastInlineDelegatePropertyWrapper=BP_Enemy_C.Collision.Collision,CapsuleCom
 Comp_EnemyShoot_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -437,8 +437,8 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[10]\" \"Object.Mappings.Mappings.Mappings[10].Triggers\" \"Object.Mappings.Mappings.Mappings[11]\" \"Object.Mappings.Mappings.Mappings[12]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[14].Triggers\" \"Object.Mappings.Mappings.Mappings[15]\" \"Object.Mappings.Mappings.Mappings[16]\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
-InputAction="\"Object\" "
+DataAsset="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Modifiers\" "
+InputAction="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Modifiers\" "
 NiagaraBakerOutputTexture2D="\"Object\" "
 NiagaraBakerOutput="\"Object\" "
 NiagaraSystem="\"Object\" "
@@ -558,8 +558,8 @@ Blockout_Box_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\"
 BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object\" "
 PreviewMaterial="\"Object\" "
@@ -715,8 +715,6 @@ LODInfoUILayout="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Weapon_Component.BP_Weapon_Component
-OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_Enemy.BP_Enemy
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -2573,28 +2571,32 @@ SkeletalMesh.SkinWeights=True
 SkeletalMesh.RayTracing=True
 SkeletalMesh.Sampling=True
 SkeletalMesh.Deformer=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Enemies/BP_Enemy
-MRUItem1=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem2=/Game/Blueprints/BP_WallRide
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/Maps/FirstPersonMap
-MRUItem5=/Game/Maps/Menu
-MRUItem6=/Game/Maps/ArenaTest
-MRUItem7=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
-MRUItem8=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem9=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem10=/Game/Blueprints/BP_PortalResource
-MRUItem11=/Game/Widget/W_SkillPoint_ObtentionNotify
-MRUItem12=/Game/Blueprints/Enemies/Comp_EnemyShoot
-MRUItem13=/Game/Blueprints/Enemies/BP_EnemyProjectile
-MRUItem14=/Game/Widget/W_Main
-MRUItem15=/Game/FirstPerson/Input/IMC_Default
-MRUItem16=/Game/Widget/GlitchEffect/GlitchEffect/M_GlitchSkillPoint
-MRUItem17=/Game/Widget/GlitchEffect/GlitchEffect/M_BaseGlitch
-MRUItem18=/Game/Widget/GlitchEffect/GlitchEffect/M_BaseGlitch_ColorBugs
-MRUItem19=/Game/Widget/GlitchEffect/GlitchEffect/M_GlitchBanner
+MRUItem0=/Game/FirstPerson/Input/Actions/IA_Dash
+MRUItem1=/Game/Blueprints/BP_WallRide
+MRUItem2=/Game/Audio/AudioSettings/SC_SFX
+MRUItem3=/Game/Widget/W_Main
+MRUItem4=/Game/Widget/Menu/W_Options
+MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem6=/Game/Blueprints/Enemies/BP_Enemy
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/Maps/FirstPersonMap
+MRUItem9=/Game/Maps/Menu
+MRUItem10=/Game/Maps/ArenaTest
+MRUItem11=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
+MRUItem12=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem13=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem14=/Game/Blueprints/BP_PortalResource
+MRUItem15=/Game/Widget/W_SkillPoint_ObtentionNotify
+MRUItem16=/Game/Blueprints/Enemies/Comp_EnemyShoot
+MRUItem17=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem18=/Game/FirstPerson/Input/IMC_Default
+MRUItem19=/Game/Widget/GlitchEffect/GlitchEffect/M_GlitchSkillPoint
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -2781,7 +2783,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=166.000 Y=0.000
+ScreenPosition=X=341.000 Y=0.000
 WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
@@ -4399,4 +4401,7 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[ColorPickerUI]
+bAdvancedSectionExpanded=True
 
