--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ StaticMeshComponent=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Co
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+SkeletalMeshComponent=
 CapsuleComponent=
 SceneComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -333,7 +333,7 @@ BP_PlatformReveal_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Co
 BP_PortalResource_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 BP_DebrisMaker_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
 BP_PlatformPieces_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
-W_Pause_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
+W_Pause_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_FormatText=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
 W_Menu_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 W_SkillTree_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
@@ -354,7 +354,7 @@ MulticastInlineDelegatePropertyWrapper=BP_Enemy_C.Collision.Collision,CapsuleCom
 Comp_EnemyShoot_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Widget/Menu
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -557,7 +557,7 @@ ShapeComponent="\"Object\" "
 Blockout_Box_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -585,7 +585,7 @@ MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
 BackgroundBlur="\"Object\" "
-ContentWidget="\"Object\" \"Object.Content.Padding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 W_SpellWheel_C="\"Object\" "
 UserWidget="\"Object\" "
 MaterialExpressionConstant4Vector="\"Object\" "
@@ -657,8 +657,8 @@ AssetViewerSettings="\"Object\" "
 FirstPerson_AnimBP_C="\"Object\" "
 AnimInstance="\"Object\" "
 W_Pause_C="\"Object\" "
-VerticalBox="\"Object\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 W_SkillTree_C="\"Object\" "
 W_Menu_C="\"Object\" "
 W_SkillButton_C="\"Object\" "
@@ -2577,26 +2577,26 @@ K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Input/Actions/IA_Dash
-MRUItem1=/Game/Blueprints/BP_WallRide
-MRUItem2=/Game/Audio/AudioSettings/SC_SFX
-MRUItem3=/Game/Widget/W_Main
-MRUItem4=/Game/Widget/Menu/W_Options
-MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem6=/Game/Blueprints/Enemies/BP_Enemy
-MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem8=/Game/Maps/FirstPersonMap
-MRUItem9=/Game/Maps/Menu
-MRUItem10=/Game/Maps/ArenaTest
-MRUItem11=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
-MRUItem12=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem13=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem14=/Game/Blueprints/BP_PortalResource
-MRUItem15=/Game/Widget/W_SkillPoint_ObtentionNotify
-MRUItem16=/Game/Blueprints/Enemies/Comp_EnemyShoot
-MRUItem17=/Game/Blueprints/Enemies/BP_EnemyProjectile
-MRUItem18=/Game/FirstPerson/Input/IMC_Default
-MRUItem19=/Game/Widget/GlitchEffect/GlitchEffect/M_GlitchSkillPoint
+MRUItem0=/Game/Widget/Menu/W_Pause
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/FirstPerson/Input/Actions/IA_Dash
+MRUItem3=/Game/Blueprints/BP_WallRide
+MRUItem4=/Game/Audio/AudioSettings/SC_SFX
+MRUItem5=/Game/Widget/W_Main
+MRUItem6=/Game/Widget/Menu/W_Options
+MRUItem7=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem8=/Game/Blueprints/Enemies/BP_Enemy
+MRUItem9=/Game/Maps/FirstPersonMap
+MRUItem10=/Game/Maps/Menu
+MRUItem11=/Game/Maps/ArenaTest
+MRUItem12=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
+MRUItem13=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem15=/Game/Blueprints/BP_PortalResource
+MRUItem16=/Game/Widget/W_SkillPoint_ObtentionNotify
+MRUItem17=/Game/Blueprints/Enemies/Comp_EnemyShoot
+MRUItem18=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem19=/Game/FirstPerson/Input/IMC_Default
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
