--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -319,7 +319,7 @@ K2Node_EnhancedInputAction=BP_Enemy_C.Collision.Collision,CapsuleComponent.Colli
 BP_WallRide_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 PointLight=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision
 BP_GravityChanger_C=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision
-PlayerController=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
+PlayerController=
 PawnSensingComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_FunctionResult=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
 W_Main_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -354,7 +354,7 @@ MulticastInlineDelegatePropertyWrapper=BP_Enemy_C.Collision.Collision,CapsuleCom
 Comp_EnemyShoot_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Widget/Menu
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -2577,26 +2577,26 @@ K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/Menu/W_Pause
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/FirstPerson/Input/Actions/IA_Dash
-MRUItem3=/Game/Blueprints/BP_WallRide
-MRUItem4=/Game/Audio/AudioSettings/SC_SFX
-MRUItem5=/Game/Widget/W_Main
-MRUItem6=/Game/Widget/Menu/W_Options
-MRUItem7=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem8=/Game/Blueprints/Enemies/BP_Enemy
-MRUItem9=/Game/Maps/FirstPersonMap
-MRUItem10=/Game/Maps/Menu
-MRUItem11=/Game/Maps/ArenaTest
-MRUItem12=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
-MRUItem13=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem15=/Game/Blueprints/BP_PortalResource
-MRUItem16=/Game/Widget/W_SkillPoint_ObtentionNotify
-MRUItem17=/Game/Blueprints/Enemies/Comp_EnemyShoot
-MRUItem18=/Game/Blueprints/Enemies/BP_EnemyProjectile
-MRUItem19=/Game/FirstPerson/Input/IMC_Default
+MRUItem0=/Game/Widget/Menu/W_Options
+MRUItem1=/Game/Widget/Menu/W_Menu
+MRUItem2=/Game/Widget/Menu/W_Pause
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/FirstPerson/Input/Actions/IA_Dash
+MRUItem5=/Game/Blueprints/BP_WallRide
+MRUItem6=/Game/Audio/AudioSettings/SC_SFX
+MRUItem7=/Game/Widget/W_Main
+MRUItem8=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem9=/Game/Blueprints/Enemies/BP_Enemy
+MRUItem10=/Game/Maps/FirstPersonMap
+MRUItem11=/Game/Maps/Menu
+MRUItem12=/Game/Maps/ArenaTest
+MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
+MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem15=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem16=/Game/Blueprints/BP_PortalResource
+MRUItem17=/Game/Widget/W_SkillPoint_ObtentionNotify
+MRUItem18=/Game/Blueprints/Enemies/Comp_EnemyShoot
+MRUItem19=/Game/Blueprints/Enemies/BP_EnemyProjectile
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
