--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ StaticMeshComponent=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Co
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 CapsuleComponent=
 SceneComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -174,7 +174,7 @@ RotatingMovementComponent=BP_Enemy_C.Collision.Collision
 Blockout_Skewbox_C=BP_Enemy_C.Collision.Collision
 Portal_C=BP_Enemy_C.Collision.Collision
 StaticMeshActor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BP_FirstPersonCharacter_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+BP_FirstPersonCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.PBRWorkflow,MaterialEditorInstanceConstant.ParameterGroups.Base Color,MaterialEditorInstanceConstant.ParameterGroups.Emissive,MaterialEditorInstanceConstant.ParameterGroups.MetallicRoughness,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Occlusion,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.ClearCoat
 MaterialInstanceConstant=
 EdGraphNode_Comment=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -183,7 +183,7 @@ PropertyWrapper=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collis
 CustomGameInstance_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_MacroInstance=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_VariableGet=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-K2Node_CustomEvent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+K2Node_CustomEvent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 BP_Portal_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 BP_EnemyShooter_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
@@ -322,7 +322,7 @@ BP_GravityChanger_C=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Co
 PlayerController=
 PawnSensingComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_FunctionResult=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
-W_Main_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+W_Main_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_Timeline=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 BP_Objective_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 WidgetComponent=
@@ -415,7 +415,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Widget/ingame/textures
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -557,7 +557,7 @@ ShapeComponent="\"Object\" "
 Blockout_Box_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -711,10 +711,22 @@ AnimationAsset="\"Object\" "
 SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
+MaterialExpressionMultiply="\"Object\" "
+MaterialExpressionLinearInterpolate="\"Object\" "
+MaterialExpressionScalarParameter="\"Object\" "
+MaterialExpressionIf="\"Object\" "
+MaterialExpressionOneMinus="\"Object\" "
+MaterialExpressionFloor="\"Object\" "
+MaterialExpressionConstant2Vector="\"Object\" "
+MaterialExpressionTextureCoordinate="\"Object\" "
+MaterialExpressionStep="\"Object\" "
+MaterialExpressionClamp="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/Widget/W_Main.W_Main
+OpenAssetsAtExit=/Game/Widget/ingame/M_SlowTime_Countdown.M_SlowTime_Countdown
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -2575,28 +2587,54 @@ K2Node_Composite.GraphNodeDetail=True
 K2Node_Composite.Graph=True
 K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
+Texture2D.Interchange =True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionIf.MaterialExpressionIf=True
+MaterialExpressionIf.MaterialExpression=True
+MaterialExpressionOneMinus.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionFloor.MaterialExpression=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionStep.MaterialExpressionStep=True
+MaterialExpressionStep.MaterialExpression=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/Menu/W_Options
-MRUItem1=/Game/Widget/Menu/W_Menu
-MRUItem2=/Game/Widget/Menu/W_Pause
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/FirstPerson/Input/Actions/IA_Dash
-MRUItem5=/Game/Blueprints/BP_WallRide
-MRUItem6=/Game/Audio/AudioSettings/SC_SFX
-MRUItem7=/Game/Widget/W_Main
-MRUItem8=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem9=/Game/Blueprints/Enemies/BP_Enemy
-MRUItem10=/Game/Maps/FirstPersonMap
-MRUItem11=/Game/Maps/Menu
-MRUItem12=/Game/Maps/ArenaTest
-MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
-MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem15=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem16=/Game/Blueprints/BP_PortalResource
-MRUItem17=/Game/Widget/W_SkillPoint_ObtentionNotify
-MRUItem18=/Game/Blueprints/Enemies/Comp_EnemyShoot
-MRUItem19=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem0=/Game/Widget/ingame/M_SlowTime_Countdown
+MRUItem1=/Game/Widget/ingame/M_ResourceBarre
+MRUItem2=/Game/Widget/W_Main
+MRUItem3=/Game/Widget/ingame/textures/icon_cursor
+MRUItem4=/Game/Widget/ingame/textures/resources_barre
+MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem6=/Game/Widget/Menu/W_Options
+MRUItem7=/Game/Widget/Menu/W_Menu
+MRUItem8=/Game/Widget/Menu/W_Pause
+MRUItem9=/Game/FirstPerson/Input/Actions/IA_Dash
+MRUItem10=/Game/Blueprints/BP_WallRide
+MRUItem11=/Game/Audio/AudioSettings/SC_SFX
+MRUItem12=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem13=/Game/Blueprints/Enemies/BP_Enemy
+MRUItem14=/Game/Maps/FirstPersonMap
+MRUItem15=/Game/Maps/Menu
+MRUItem16=/Game/Maps/ArenaTest
+MRUItem17=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
+MRUItem18=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem19=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -2701,6 +2739,11 @@ MRUItem19=/Game/Blueprints/Enemies/BP_EnemyProjectile
 /Game/Characters/Mannequin_UE4/Animations/Jog_Fwd.Jog_Fwd=0
 /Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton.SK_Mannequin_Skeleton=0
 /Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin=0
+/Game/Widget/ingame/textures/hexagon_shape_low.hexagon_shape_low=1
+/Game/Widget/ingame/textures/resources_barre.resources_barre=1
+/Game/Widget/ingame/textures/icon_cursor.icon_cursor=1
+/Game/Widget/ingame/M_SlowTime_Countdown.M_SlowTime_Countdown=0
+/Game/Widget/ingame/M_ResourceBarre.M_ResourceBarre=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3862,8 +3905,8 @@ AnimationEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Programme/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UnrealEngine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Programme/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=G:/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
@@ -3891,7 +3934,6 @@ MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [WidgetTemplatesExpanded]
 Audio=False
