--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -422,7 +422,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Enemies
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -747,7 +747,7 @@ K2Node_Variable="\"Object\" "
 LightmassPrimitiveSettingsObject="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -2969,7 +2969,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Documents/Unreal Projects/PFA1ereAnnee/PFAparkour/PFAparkour/Content/Maps
+UNR=../../../../../../Users/Clotaire CARTON/Documents/Unreal Projects/PFAprakour/PFAparkour/Content/Maps
 BRUSH=../../../../../../Documents/Unreal Projects/PFAparkour/Content/
 FBX=../../../../../../Documents/Unreal Projects/PFAparkour/Content/
 FBXAnim=../../../../../../Documents/Unreal Projects/PFAparkour/Content/
@@ -4003,11 +4003,11 @@ MovieSceneCapture.TimeStamp=2023.06.12-18.54.26
 MovieSceneCapture.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2023.06.12-18.54.28
 SequencerWidgets.LastCompileMethod=External
-BlockoutToolsPlugin.TimeStamp=2023.06.13-12.07.45
+BlockoutToolsPlugin.TimeStamp=2023.06.14-13.29.30
 BlockoutToolsPlugin.LastCompileMethod=External
 FlatNodes.TimeStamp=2023.06.10-11.56.07
 FlatNodes.LastCompileMethod=External
-BlockoutToolsEditorPlugin.TimeStamp=2023.06.13-12.07.44
+BlockoutToolsEditorPlugin.TimeStamp=2023.06.14-13.29.30
 BlockoutToolsEditorPlugin.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2023.06.12-18.54.25
 HierarchicalLODUtilities.LastCompileMethod=External
@@ -4030,6 +4030,7 @@ AnimationEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UnrealEngine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Programme/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=G:/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
