--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -423,7 +423,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Meshs/Props/Bus
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -751,12 +751,6 @@ Blockout_Sphere_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Ma
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Meshs/Props/Building_part/MI_PartBuilding.MI_PartBuilding
-OpenAssetsAtExit=/Game/Meshs/Props/Phone_Box/MI_PhoneVitres.MI_PhoneVitres
-OpenAssetsAtExit=/Game/Meshs/Props/Phone_Box/Phone_box.Phone_box
-OpenAssetsAtExit=/Game/Meshs/Props/Phone_Box/M_Vitres_BaseColor.M_Vitres_BaseColor
-OpenAssetsAtExit=/Game/Meshs/Props/Phone_Box/MI_PhoneBox.MI_PhoneBox
-OpenAssetsAtExit=/Game/Meshs/Props/Building_Clean/Building_clean.Building_clean
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -1623,6 +1617,7 @@ MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=Tr
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -2702,7 +2697,6 @@ Brush.BrushSettings=True
 Brush.Networking=True
 Brush.WorldPartition=True
 Brush.Actor=True
-Texture2D.Interchange =True
 NavMeshBoundsVolume.WorldPartition=True
 Generic.Surface Materials=True
 Generic.Geometry=True
@@ -2797,26 +2791,26 @@ SpotLight.WorldPartition=True
 SpotLight.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Meshs/Props/Building_Clean/Building_clean
-MRUItem1=/Game/Meshs/Props/Phone_Box/M_Vitres_BaseColor
-MRUItem2=/Game/Meshs/Props/Phone_Box/Phone_box
-MRUItem3=/Game/Meshs/Props/Phone_Box/MI_PhoneVitres
-MRUItem4=/Game/Meshs/Props/Phone_Box/MI_PhoneBox
-MRUItem5=/Game/Meshs/Props/Bus/Bus_M_Bus_BaseColor
-MRUItem6=/Game/Meshs/Props/Building_part/M_Building_parts_BaseColor
-MRUItem7=/Game/Meshs/Props/Building_part/Building_part
-MRUItem8=/Game/Meshs/Props/Building_part/M_Building_parts_Normal
-MRUItem9=/Game/Meshs/Props/Building_part/M_Building_parts_OcclusionRoughnessMetallic
-MRUItem10=/Game/Meshs/Props/Building_part/MI_PartBuilding
-MRUItem11=/Game/Meshs/Props/Building_Clean/M_building_clean_BaseColor
-MRUItem12=/Game/Meshs/Props/Building_Clean/M_building_clean_Normal
-MRUItem13=/Game/Meshs/Props/Building_Clean/M_building_clean_OcclusionRoughnessMetallic
-MRUItem14=/Game/Meshs/Props/Building_Clean/MI_CleanBuilding
-MRUItem15=/Game/Meshs/Props/Trash/Trash
-MRUItem16=/Game/Meshs/Props/Bus/Bus_2
-MRUItem17=/Game/Meshs/Props/Grue/Grue_2
-MRUItem18=/Game/Meshs/Props/Grue/Grue
-MRUItem19=/Game/Meshs/Props/Grue/MI_Grue_3
+MRUItem0=/Game/Maps/FirstPersonMap
+MRUItem1=/Game/Maps/FirstPersonMap_WithEnnemies
+MRUItem2=/Game/Meshs/Props/Building_Clean/Building_clean
+MRUItem3=/Game/Meshs/Props/Phone_Box/M_Vitres_BaseColor
+MRUItem4=/Game/Meshs/Props/Phone_Box/Phone_box
+MRUItem5=/Game/Meshs/Props/Phone_Box/MI_PhoneVitres
+MRUItem6=/Game/Meshs/Props/Phone_Box/MI_PhoneBox
+MRUItem7=/Game/Meshs/Props/Bus/Bus_M_Bus_BaseColor
+MRUItem8=/Game/Meshs/Props/Building_part/M_Building_parts_BaseColor
+MRUItem9=/Game/Meshs/Props/Building_part/Building_part
+MRUItem10=/Game/Meshs/Props/Building_part/M_Building_parts_Normal
+MRUItem11=/Game/Meshs/Props/Building_part/M_Building_parts_OcclusionRoughnessMetallic
+MRUItem12=/Game/Meshs/Props/Building_part/MI_PartBuilding
+MRUItem13=/Game/Meshs/Props/Building_Clean/M_building_clean_BaseColor
+MRUItem14=/Game/Meshs/Props/Building_Clean/M_building_clean_Normal
+MRUItem15=/Game/Meshs/Props/Building_Clean/M_building_clean_OcclusionRoughnessMetallic
+MRUItem16=/Game/Meshs/Props/Building_Clean/MI_CleanBuilding
+MRUItem17=/Game/Meshs/Props/Trash/Trash
+MRUItem18=/Game/Meshs/Props/Bus/Bus_2
+MRUItem19=/Game/Meshs/Props/Grue/Grue_2
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -3030,7 +3024,7 @@ bHideLevelInstanceContent=True
 bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Maps/FirstPersonMap.FirstPersonMap", ()))
+PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Maps/FirstPersonMap_WithEnnemies.FirstPersonMap_WithEnnemies", ()))
 
 [RootWindow]
 ScreenPosition=X=341.000 Y=0.000
@@ -3051,7 +3045,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Ewan GAVOILLE/Documents/Unreal Projects/PFA_1ère_Année/PFAprakour/PFAparkour/Content/Maps
+UNR=../../../../../../Users/Clotaire CARTON/Documents/Unreal Projects/PFAprakour/PFAparkour/Content/Maps
 BRUSH=../../../../../../Documents/Unreal Projects/PFAparkour/Content/
 FBX=../../../../../../Documents/Unreal Projects/PFAparkour/Content/
 FBXAnim=../../../../../../Documents/Unreal Projects/PFAparkour/Content/
@@ -4085,11 +4079,11 @@ MovieSceneCapture.TimeStamp=2023.06.12-18.54.26
 MovieSceneCapture.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2023.06.12-18.54.28
 SequencerWidgets.LastCompileMethod=External
-BlockoutToolsPlugin.TimeStamp=2023.06.13-12.07.45
+BlockoutToolsPlugin.TimeStamp=2023.06.14-13.29.30
 BlockoutToolsPlugin.LastCompileMethod=External
 FlatNodes.TimeStamp=2023.06.10-11.56.07
 FlatNodes.LastCompileMethod=External
-BlockoutToolsEditorPlugin.TimeStamp=2023.06.13-12.07.44
+BlockoutToolsEditorPlugin.TimeStamp=2023.06.14-13.29.30
 BlockoutToolsEditorPlugin.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2023.06.12-18.54.25
 HierarchicalLODUtilities.LastCompileMethod=External
@@ -4135,9 +4129,10 @@ bSCCUseGlobalSettings=False
 
 [MRU]
 MRUItem0=/Game/Maps/FirstPersonMap
-MRUItem1=/Game/Maps/ArenaTest
-MRUItem2=/Game/Maps/Menu
-MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem1=/Game/Maps/FirstPersonMap_WithEnnemies
+MRUItem2=/Game/Maps/ArenaTest
+MRUItem3=/Game/Maps/Menu
+MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
